tests/baselines/reference/callWithSpread5.errors.txt
tests/cases/conformance/expressions/functionCalls/callWithSpread5.ts(7,4): error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.


==== tests/cases/conformance/expressions/functionCalls/callWithSpread5.ts (1 errors) ====
    declare const x: number
    declare const nnnu: [number, number, number?]
    declare const nntnnnt: [number, number] | [number, number, number]
    declare function fn(a: number, b: number, bb: number, ...c: number[]): number
    
    fn(...nnnu, x)
    fn(...nntnnnt, x)
       ~~~~~~~~~~
!!! error TS2556: A spread argument must either have a tuple type or be passed to a rest parameter.
    